<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onClick"
    android:orientation="vertical"
    tools:context=".Calculate_data">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <EditText
            android:id="@+id/input_data1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@color/material_dynamic_neutral90"
            android:hint="@string/first_date"
            android:inputType="text"
            android:padding="17dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="25sp"

            />
    </LinearLayout>

    <EditText
        android:id="@+id/input_data2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@color/material_dynamic_neutral90"
        android:hint="@string/second_data"
        android:inputType="text"
        android:padding="17dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_do_calc_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:insetLeft="5dp"
        android:insetTop="10dp"
        android:insetRight="5dp"
        android:insetBottom="10dp"

        android:text="@string/button_name"
        android:textSize="25sp"

        app:cornerRadius="30dp" />


    <Button
        android:id="@+id/restart_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:insetLeft="5dp"
        android:insetTop="10dp"
        android:insetRight="5dp"
        android:insetBottom="10dp"

        android:text="@string/restart"
        android:textSize="25sp"

        app:cornerRadius="30dp" />

    <Button
        android:id="@+id/b_to_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:insetLeft="5dp"
        android:insetTop="10dp"
        android:insetRight="5dp"
        android:insetBottom="10dp"

        android:onClick="onClick"
        android:text="@string/main_menu"

        android:textSize="25sp"
        app:cornerRadius="30dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/data_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/material_dynamic_secondary20"
            android:text="@string/result"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </ScrollView>

</LinearLayout>